--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -8,3 +8,9 @@
 
 @use 'chunks/dashboard/first';
 @use 'chunks/dashboard/why';
+@use 'chunks/dashboard/works';
+@use 'chunks/dashboard/how';
+@use 'chunks/dashboard/dashform';
+@use 'chunks/dashboard/reviews';
+@use 'chunks/dashboard/faq';
+@use 'chunks/dashboard/comand';
