--- a/templates/dashboard/works.html
+++ b/templates/dashboard/works.html
@@ -3,39 +3,60 @@
   <div class="wrap">
     <div class="works__hdr">
       <h1 class="works__title">
-        Почему нас выбирают
+        Наши работы
       </h1>
       <div class="works__controls">
-
+        <button class="works__controls-prev" type="button">
+          <svg class="icon" width="56" height="24">
+            <use href="/images/sprite.svg#arrow" fill="currentColor"></use>
+          </svg>
+        </button>
+        <button class="works__controls-next" type="button">
+          <svg class="icon" width="56" height="24">
+            <use href="/images/sprite.svg#arrow" fill="currentColor"></use>
+          </svg>
+        </button>
       </div>
     </div>
-    <div class="works__slider swiper">
-
-      <div class="works__list swiper-wrapper">
-        <div class="works__slide swiper-slide">
-          <video class="works__slide-video" muted playsinline preload="none" poster="/images/person.png">
-            <source src="/videos/one.mp4" type="video/mp4" />
-            Ваш браузер не поддерживает видео.
-          </video>
-          <button type="button" class="works__slide-play">
-            <svg class="icon" width="72" height="72">
-              <use href="/images/sprite.svg#play" fill="currentColor"></use>
-            </svg>
-          </button>
-        </div>
-        <div class="works__item swiper-slide">
-          <div class="works__item-images swiper">
-            <div class="swiper-wrapper">
-              <img class="swiper-slide" src="/images/work-slide.png" alt="works">
-              <img class="swiper-slide" src="/images/work-slide.png" alt="works">
+  </div>
+  <div class="works__slider swiper outer-swiper">
+    <div class="swiper-wrapper">
+      <div class="works__slide swiper-slide">
+        <video class="works__slide-video" muted playsinline preload="none" poster="/images/person.png">
+          <source src="/videos/one.mp4" type="video/mp4" />
+          Ваш браузер не поддерживает видео.
+        </video>
+        <button type="button" class="works__slide-play">
+          <svg class="icon" width="72" height="72">
+            <use href="/images/sprite.svg#play" fill="currentColor"></use>
+          </svg>
+        </button>
+      </div>
+      <div class="works__item swiper-slide">
+        <div class="works__item-images swiper inner-swiper">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide">
+              <img class="works__item-image" src="/images/work-slide.png">
             </div>
-            <div class="swiper-pagination"></div>
+            <div class="swiper-slide">
+              <img class="works__item-image" src="/images/work-slide.png">
+            </div>
+            <div class="swiper-slide">
+              <img class="works__item-image" src="/images/work-slide.png">
+            </div>
+            <div class="swiper-slide">
+              <img class="works__item-image" src="/images/work-slide.png">
+            </div>
           </div>
+        </div>
+        <div class="works__item-main">
+          <div class="swiper-pagination inner-pagination"></div>
           <div class="works__item-title">
             Ремонт 2х ком., 42 м2
           </div>
           <div class="works__item-text">
             Под ключ с мебелью за 56 дней.Стоимость работ: 35 000 руб/м2. Калининград, ул.Толстикова, ЖК «Мичуринский
+            парк» ул.Толстикова, ЖК «Мичуринский
             парк»
           </div>
           <a href="" class="works__item-more">
@@ -45,19 +66,32 @@
             </svg>
           </a>
         </div>
-        <div class="works__item swiper-slide">
-          <div class="works__item-images swiper">
-            <div class="swiper-wrapper">
-              <img class="swiper-slide" src="/images/work-slide.png" alt="works">
-              <img class="swiper-slide" src="/images/work-slide.png" alt="works">
+      </div>
+      <div class="works__item swiper-slide">
+        <div class="works__item-images swiper inner-swiper">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide">
+              <img class="works__item-image" src="/images/work-slide.png">
             </div>
-            <div class="swiper-pagination"></div>
+            <div class="swiper-slide">
+              <img class="works__item-image" src="/images/work-slide.png">
+            </div>
+            <div class="swiper-slide">
+              <img class="works__item-image" src="/images/work-slide.png">
+            </div>
+            <div class="swiper-slide">
+              <img class="works__item-image" src="/images/work-slide.png">
+            </div>
           </div>
+        </div>
+        <div class="works__item-main">
+          <div class="swiper-pagination inner-pagination"></div>
           <div class="works__item-title">
             Ремонт 2х ком., 42 м2
           </div>
           <div class="works__item-text">
             Под ключ с мебелью за 56 дней.Стоимость работ: 35 000 руб/м2. Калининград, ул.Толстикова, ЖК «Мичуринский
+            парк» ул.Толстикова, ЖК «Мичуринский
             парк»
           </div>
           <a href="" class="works__item-more">
@@ -67,19 +101,32 @@
             </svg>
           </a>
         </div>
-        <div class="works__item swiper-slide">
-          <div class="works__item-images swiper">
-            <div class="swiper-wrapper">
-              <img class="swiper-slide" src="/images/work-slide.png" alt="works">
-              <img class="swiper-slide" src="/images/work-slide.png" alt="works">
+      </div>
+      <div class="works__item swiper-slide">
+        <div class="works__item-images swiper inner-swiper">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide">
+              <img class="works__item-image" src="/images/work-slide.png">
             </div>
-            <div class="swiper-pagination"></div>
+            <div class="swiper-slide">
+              <img class="works__item-image" src="/images/work-slide.png">
+            </div>
+            <div class="swiper-slide">
+              <img class="works__item-image" src="/images/work-slide.png">
+            </div>
+            <div class="swiper-slide">
+              <img class="works__item-image" src="/images/work-slide.png">
+            </div>
           </div>
+        </div>
+        <div class="works__item-main">
+          <div class="swiper-pagination inner-pagination"></div>
           <div class="works__item-title">
             Ремонт 2х ком., 42 м2
           </div>
           <div class="works__item-text">
             Под ключ с мебелью за 56 дней.Стоимость работ: 35 000 руб/м2. Калининград, ул.Толстикова, ЖК «Мичуринский
+            парк» ул.Толстикова, ЖК «Мичуринский
             парк»
           </div>
           <a href="" class="works__item-more">
@@ -89,19 +136,32 @@
             </svg>
           </a>
         </div>
-        <div class="works__item swiper-slide">
-          <div class="works__item-images swiper">
-            <div class="swiper-wrapper">
-              <img class="swiper-slide" src="/images/work-slide.png" alt="works">
-              <img class="swiper-slide" src="/images/work-slide.png" alt="works">
+      </div>
+      <div class="works__item swiper-slide">
+        <div class="works__item-images swiper inner-swiper">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide">
+              <img class="works__item-image" src="/images/work-slide.png">
             </div>
-            <div class="swiper-pagination"></div>
+            <div class="swiper-slide">
+              <img class="works__item-image" src="/images/work-slide.png">
+            </div>
+            <div class="swiper-slide">
+              <img class="works__item-image" src="/images/work-slide.png">
+            </div>
+            <div class="swiper-slide">
+              <img class="works__item-image" src="/images/work-slide.png">
+            </div>
           </div>
+        </div>
+        <div class="works__item-main">
+          <div class="swiper-pagination inner-pagination"></div>
           <div class="works__item-title">
             Ремонт 2х ком., 42 м2
           </div>
           <div class="works__item-text">
             Под ключ с мебелью за 56 дней.Стоимость работ: 35 000 руб/м2. Калининград, ул.Толстикова, ЖК «Мичуринский
+            парк» ул.Толстикова, ЖК «Мичуринский
             парк»
           </div>
           <a href="" class="works__item-more">
@@ -111,6 +171,66 @@
             </svg>
           </a>
         </div>
+      </div>
+      <div class="works__item swiper-slide">
+        <div class="works__item-images swiper inner-swiper">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide">
+              <img class="works__item-image" src="/images/work-slide.png">
+            </div>
+            <div class="swiper-slide">
+              <img class="works__item-image" src="/images/work-slide.png">
+            </div>
+            <div class="swiper-slide">
+              <img class="works__item-image" src="/images/work-slide.png">
+            </div>
+            <div class="swiper-slide">
+              <img class="works__item-image" src="/images/work-slide.png">
+            </div>
+          </div>
+        </div>
+        <div class="works__item-main">
+          <div class="swiper-pagination inner-pagination"></div>
+          <div class="works__item-title">
+            Ремонт 2х ком., 42 м2
+          </div>
+          <div class="works__item-text">
+            Под ключ с мебелью за 56 дней.Стоимость работ: 35 000 руб/м2. Калининград, ул.Толстикова, ЖК «Мичуринский
+            парк» ул.Толстикова, ЖК «Мичуринский
+            парк»
+          </div>
+          <a href="" class="works__item-more">
+            Подробнее
+            <svg class="icon" width="32" height="24">
+              <use href="/images/sprite.svg#arrow" fill="currentColor"></use>
+            </svg>
+          </a>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="wrap">
+    <div class="works__invite">
+      <picture>
+        <source srcset="/images/house-mob@2x.webp 2x, /images/house-mob.webp 1x" media="(max-width: 1240px)"
+          type="image/webp">
+        <source srcset="/images/house-mob@2x.png 2x, /images/house-mob.png 1x" media="(max-width: 1240px)"
+          type="image/png">
+        <source srcset="/images/house@2x.webp 2x, /images/house.webp 1x" type="image/webp">
+        <source srcset="/images/house@2x.png 2x, /images/house.png 1x" type="image/png">
+        <img src="/images/house.png" alt="" loading="lazy" class="works__invite-img">
+      </picture>
+      <div class="works__invite-info">
+        <div class="works__invite-title">
+          Приглашаем посмотреть, как мы работаем
+        </div>
+        <div class="works__invite-text">
+          Посетите действующие наши проекты и убедитесь в подходе и качестве работ в ремонте нашей команды. Организуем
+          экскурсию в удобное для вас время.
+        </div>
+        <a href="" class="works__invite-action">
+          Оставить заявку
+        </a>
       </div>
     </div>
   </div>
