--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -75,53 +75,6 @@ h6 {
     box-sizing: content-box;
 }
 
-.video {
-    position: relative;
-    padding-bottom: 56.25%;
-    height: 0;
-    overflow: hidden;
-    margin-top: 24px;
-    margin-bottom: 24px;
-
-    iframe,
-    object,
-    embed {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-    }
-}
-.field-search {
-    position: relative;
-
-    &.error {
-        input,
-        textarea {
-            border-color: var(--alarm);
-        }
-
-        .field__error {
-            display: block;
-        }
-    }
-
-    .icon {
-        position: absolute;
-        right: 20px;
-        top: 17px;
-        pointer-events: none;
-    }
-
-    .field-search__reset {
-        position: absolute;
-        right: 20px;
-        top: 17px;
-        cursor: pointer;
-    }
-}
-
 .field {
     position: relative;
     width: 100%;
@@ -151,13 +104,12 @@ h6 {
 
     .label {
         position: absolute;
-        left: 20px;
-        top: 20px;
-        color: var(--text_gray);
+        left: 24px;
+        top: 24px;
+        color: #9a9a9a;
         transition: 0.2s;
         pointer-events: none;
-        font-size: 14px;
-        line-height: 20px;
+        @include mixins.type(16, 24);
     }
 
     &.active .label {
